# turbine-proxy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  build.rs  cliff.toml  commitlint.config.js  docker-compose.chaos.yml  docker-compose.yml  lefthook.yml  turbineproxy.example.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: chaos.yml  ci.yml  release.yml
benches/: proxy_bench.rs
dashboard/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
dashboard/public/grafana/: turbineproxy.json
dashboard/src/: App.css  App.jsx  ConfigPanel.jsx  ErrorsPanel.jsx  PostgresPanel.jsx  i18n.js  index.css  main.jsx
dashboard/src/locales/: de.js  en.js  es.js  fr.js  pl.js  pt.js  zh.js
dashboard/src/test/: app.helpers.test.js
deploy/helm/turbineproxy/: Chart.yaml  values.yaml
deploy/helm/turbineproxy/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
docs/: Dockerfile  docker-entrypoint.sh  docusaurus.config.js  nginx.conf  package-lock.json  package.json  sidebars.js
docs/docs/: intro.md
docs/docs/api/: grafana.md  mcp.md  rest.md
docs/docs/configuration/: analytics.md  backends.md  dashboard.md  ha.md  reference.md  rewrite-rules.md  routing-rules.md  security.md  tls.md  users.md
docs/docs/dashboard/: cluster.md  overview.md  panels.md
docs/docs/deployment/: docker.md  ha-setup.md  production.md
docs/docs/features/: audit-log.md  cluster-sync.md  compression.md  connection-pooling.md  dashboard.md  failure-modes.md  fast-forward.md  grafana-integration.md  gtid-ryow.md  ha-failover.md  query-analytics.md  query-rewriting.md  query-routing.md  read-write-splitting.md  secret-management.md  sql-injection-protection.md  ssl-keylog.md
docs/docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/docs/tutorials/: connect-your-app.md  connection-pooling-tuning.md  explore-the-dashboard.md  high-availability.md  howto-hot-reload.md  howto-migrate-from-proxysql.md  howto-query-rules-dry-run.md  howto-sql-injection-protection.md  howto-stored-procedures.md  install-and-run.md  kubernetes-helm.md  prometheus-grafana.md  query-rewriting.md  rate-limiting-and-routing.md  read-write-splitting.md  secrets-encryption.md  what-is-a-database-proxy.md
docs/i18n/pt/docusaurus-plugin-content-docs/: current.json
docs/i18n/pt/docusaurus-theme-classic/: navbar.json
docs/mcp-server/: Dockerfile  index.js  package.json
docs/src/css/: custom.css
docs/src/pages/: index.js
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_scram_parser.rs
pkg/aur/: PKGBUILD
pkg/deb/scripts/: postinst  prerm
pkg/homebrew/: turbineproxy.rb
pkg/logrotate/: turbineproxy
pkg/systemd/: turbineproxy.service
scripts/: install.sh
src/: main.rs
src/analytics/: advisor.rs  collector.rs  mod.rs  storage.rs  timeseries.rs
src/config/: mod.rs  secret.rs  store.rs
src/dashboard/: grafana.rs  mcp.rs  mod.rs  prometheus.rs  routes.rs  routes_config.rs  routes_errors.rs
src/protocol/: error.rs  mod.rs
src/protocol/mysql/: auth.rs  handshake.rs  mod.rs  packet.rs  tls.rs
src/protocol/postgres/: mod.rs
src/proxy/: app_analytics.rs  auth_cache.rs  cache.rs  circuit_breaker.rs  classifier.rs  error_events.rs  fingerprint.rs  group_replication.rs  health.rs  heatmap.rs  histogram.rs  mod.rs  n1.rs  pg_health.rs  pg_server.rs  pool.rs  regression.rs  rewriter.rs  router.rs  rules.rs  security.rs  server.rs  stmt_shadow.rs  tracer.rs  user_registry.rs
tests/: chaos_tests.rs  cluster_tests.rs  integration_tests.rs  pg_integration_tests.rs
tests/fixtures/: chaos_replication_setup.sh  mariadb11_replication_setup.sh  mysql_replication_setup.sh  pg_primary_init.sh  pg_replica_init.sh
